# Run_Local_LLM_Generate_FastAPI_Apps_with_Streamlit

./: .env  .gitignore  README.md  docker-compose.yaml
ollama/: Dockerfile  init_models.sh
streamlit/: Dockerfile
streamlit/app/: requirements.txt  streamlit_app.py  text_templates.py
streamlit/app/generator/: generate_code.py  models.json
streamlit/app/generator/base_template/fastapi-app/: README.md  pyproject.toml
streamlit/app/generator/base_template/fastapi-app/src/: database.py
streamlit/app/generator/templates/: controller.py.jinja2  database.py.jinja2  main.py.jinja2  model.py.jinja2  repository.py.jinja2  service.py.jinja2
streamlit/app/generator/utils/: str_extension.py
