[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = ""
authors = ["Edgar Núñez <eanunezt@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.8"
pydantic = "^2.10.6"
sqlalchemy = "^2.0.38"
asyncpg = "^0.30.0"
alembic = "^1.14.1"
psycopg2 = "^2.9.10"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
